# chkpkgver

./: .gitignore  CMakeLists.txt  README.md  install_manifest.txt
src/: .pkglist.c.swp  getpkginfo.c  getpkginfo.h  getpkgver.c  getpkgver.h  main.c  pkglist.c  pkglist.h
